--- a/about.html
+++ b/about.html
@@ -3,11 +3,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Github</title>
+    <title>About</title>
 </head>
 <body>
     
-    <h1>Github Test!!!!!</h1>
-    <h1>Checking if we can modify the file!!!!</h1>
+    <h1>About Page !!!!</h1>
 </body>
 </html>
